--- a/rainbow.css
+++ b/rainbow.css
@@ -17,275 +17,275 @@ a[href], *[data-colour-transition] {
 
 /*  BASIC COLOURING  */
 
-*[data-colour|="cyan-light"] {
+*:root *[data-colour|="cyan-light"] {
     color: #bfe7f2;
 }
 
-*[data-colour|="blue-light"] {
+*:root *[data-colour|="blue-light"] {
     color: #d0d1f6;
 }
 
-*[data-colour|="purple-light"] {
+*:root *[data-colour|="purple-light"] {
     color: #eabdff;
 }
 
-*[data-colour|="magenta-light"] {
+*:root *[data-colour|="magenta-light"] {
     color: #f0b2d8;
 }
 
-*[data-colour|="red-light"] {
+*:root *[data-colour|="red-light"] {
     color: #f9a59b;
 }
 
-*[data-colour|="yellow-light"] {
+*:root *[data-colour|="yellow-light"] {
     color: #fcf0be;
 }
 
-*[data-colour|="green-light"] {
+*:root *[data-colour|="green-light"] {
     color: #d5fcbb;
 }
 
-*[data-colour|="teal-light"] {
+*:root *[data-colour|="teal-light"] {
     color: #bdf0df;
 }
 
-*[data-colour|="cyan-dark"] {
+*:root *[data-colour|="cyan-dark"] {
     color: #00495c;
 }
 
-*[data-colour|="blue-dark"] {
+*:root *[data-colour|="blue-dark"] {
     color: #383966;
 }
 
-*[data-colour|="purple-dark"] {
+*:root *[data-colour|="purple-dark"] {
     color: #4c3159;
 }
 
-*[data-colour|="magenta-dark"] {
+*:root *[data-colour|="magenta-dark"] {
     color: #592846;
 }
 
-*[data-colour|="red-dark"] {
+*:root *[data-colour|="red-dark"] {
     color: #5d2721;
 }
 
-*[data-colour|="yellow-dark"] {
+*:root *[data-colour|="yellow-dark"] {
     color: #4f420d;
 }
 
-*[data-colour|="green-dark"] {
+*:root *[data-colour|="green-dark"] {
     color: #1f4505;
 }
 
-*[data-colour|="teal-dark"] {
+*:root *[data-colour|="teal-dark"] {
     color: #1c4b3b;
 }
 
-*[data-colour|="cyan"] {
+*:root *[data-colour|="cyan"] {
     color: #31b9db;
 }
 
-*[data-colour|="blue"] {
+*:root *[data-colour|="blue"] {
     color: #7476fc;
 }
 
-*[data-colour|="purple"] {
+*:root *[data-colour|="purple"] {
     color: #c258f2;
 }
 
-*[data-colour|="magenta"] {
+*:root *[data-colour|="magenta"] {
     color: #e63ca4;
 }
 
-*[data-colour|="red"] {
+*:root *[data-colour|="red"] {
     color: #e83f2c;
 }
 
-*[data-colour|="yellow"] {
+*:root *[data-colour|="yellow"] {
     color: #f6d037;
 }
 
-*[data-colour|="green"] {
+*:root *[data-colour|="green"] {
     color: #6ad622;
 }
 
-*[data-colour|="teal"] {
+*:root *[data-colour|="teal"] {
     color: #49cfa2;
 }
 
-*[data-colour|="white"] {
+*:root *[data-colour|="white"] {
     color: #f5f5f5;
 }
 
-*[data-colour|="bright"] {
+*:root *[data-colour|="bright"] {
     color: #cccccc;
 }
 
-*[data-colour|="light"] {
+*:root *[data-colour|="light"] {
     color: #a3a3a3;
 }
 
-*[data-colour|="medium"] {
+*:root *[data-colour|="medium"] {
     color: #828282;
 }
 
-*[data-colour|="regular"] {
+*:root *[data-colour|="regular"] {
     color: #636363;
 }
 
-*[data-colour|="dark"] {
+*:root *[data-colour|="dark"] {
     color: #3b3b3b;
 }
 
-*[data-colour|="dim"] {
+*:root *[data-colour|="dim"] {
     color: #1c1c1c;
 }
 
-*[data-colour|="black"] {
+*:root *[data-colour|="black"] {
     color: #0c0c0c;
 }
 
-*[data-colour|="transparent"] {
+*:root *[data-colour|="transparent"] {
     color: transparent;
 }
 
-*[data-colour|="inherit"] {
+*:root *[data-colour|="inherit"] {
     color: inherit;
 }
 
-*[data-colour-background|="cyan-light"] {
+*:root *[data-colour-background|="cyan-light"] {
     background-color: #bfe7f2;
 }
 
-*[data-colour-background|="blue-light"] {
+*:root *[data-colour-background|="blue-light"] {
     background-color: #d0d1f6;
 }
 
-*[data-colour-background|="purple-light"] {
+*:root *[data-colour-background|="purple-light"] {
     background-color: #eabdff;
 }
 
-*[data-colour-background|="magenta-light"] {
+*:root *[data-colour-background|="magenta-light"] {
     background-color: #f0b2d8;
 }
 
-*[data-colour-background|="red-light"] {
+*:root *[data-colour-background|="red-light"] {
     background-color: #f9a59b;
 }
 
-*[data-colour-background|="yellow-light"] {
+*:root *[data-colour-background|="yellow-light"] {
     background-color: #fcf0be;
 }
 
-*[data-colour-background|="green-light"] {
+*:root *[data-colour-background|="green-light"] {
     background-color: #d5fcbb;
 }
 
-*[data-colour-background|="teal-light"] {
+*:root *[data-colour-background|="teal-light"] {
     background-color: #bdf0df;
 }
 
-*[data-colour-background|="cyan-dark"] {
+*:root *[data-colour-background|="cyan-dark"] {
     background-color: #00495c;
 }
 
-*[data-colour-background|="blue-dark"] {
+*:root *[data-colour-background|="blue-dark"] {
     background-color: #383966;
 }
 
-*[data-colour-background|="purple-dark"] {
+*:root *[data-colour-background|="purple-dark"] {
     background-color: #4c3159;
 }
 
-*[data-colour-background|="magenta-dark"] {
+*:root *[data-colour-background|="magenta-dark"] {
     background-color: #592846;
 }
 
-*[data-colour-background|="red-dark"] {
+*:root *[data-colour-background|="red-dark"] {
     background-color: #5d2721;
 }
 
-*[data-colour-background|="yellow-dark"] {
+*:root *[data-colour-background|="yellow-dark"] {
     background-color: #4f420d;
 }
 
-*[data-colour-background|="green-dark"] {
+*:root *[data-colour-background|="green-dark"] {
     background-color: #1f4505;
 }
 
-*[data-colour-background|="teal-dark"] {
+*:root *[data-colour-background|="teal-dark"] {
     background-color: #1c4b3b;
 }
 
-*[data-colour-background|="cyan"] {
+*:root *[data-colour-background|="cyan"] {
     background-color: #31b9db;
 }
 
-*[data-colour-background|="blue"] {
+*:root *[data-colour-background|="blue"] {
     background-color: #7476fc;
 }
 
-*[data-colour-background|="purple"] {
+*:root *[data-colour-background|="purple"] {
     background-color: #c258f2;
 }
 
-*[data-colour-background|="magenta"] {
+*:root *[data-colour-background|="magenta"] {
     background-color: #e63ca4;
 }
 
-*[data-colour-background|="red"] {
+*:root *[data-colour-background|="red"] {
     background-color: #e83f2c;
 }
 
-*[data-colour-background|="yellow"] {
+*:root *[data-colour-background|="yellow"] {
     background-color: #f6d037;
 }
 
-*[data-colour-background|="green"] {
+*:root *[data-colour-background|="green"] {
     background-color: #6ad622;
 }
 
-*[data-colour-background|="teal"] {
+*:root *[data-colour-background|="teal"] {
     background-color: #49cfa2;
 }
 
-*[data-colour-background|="white"] {
+*:root *[data-colour-background|="white"] {
     background-color: #f5f5f5;
 }
 
-*[data-colour-background|="bright"] {
+*:root *[data-colour-background|="bright"] {
     background-color: #cccccc;
 }
 
-*[data-colour-background|="light"] {
+*:root *[data-colour-background|="light"] {
     background-color: #a3a3a3;
 }
 
-*[data-colour-background|="medium"] {
+*:root *[data-colour-background|="medium"] {
     background-color: #828282;
 }
 
-*[data-colour-background|="regular"] {
+*:root *[data-colour-background|="regular"] {
     background-color: #636363;
 }
 
-*[data-colour-background|="dark"] {
+*:root *[data-colour-background|="dark"] {
     background-color: #3b3b3b;
 }
 
-*[data-colour-background|="dim"] {
+*:root *[data-colour-background|="dim"] {
     background-color: #1c1c1c;
 }
 
-*[data-colour-background|="black"] {
+*:root *[data-colour-background|="black"] {
     background-color: #0c0c0c;
 }
 
-*[data-colour-background|="transparent"] {
+*:root *[data-colour-background|="transparent"] {
     background-color: transparent;
 }
 
-*[data-colour-background|="inherit"] {
+*:root *[data-colour-background|="inherit"] {
     background-color: inherit;
 }
 
@@ -565,139 +565,139 @@ a[href], *[data-colour-transition] {
     color: transparent;
 }
 
-*[data-colour|="cyan-light"]::selection {
+*:root *[data-colour|="cyan-light"]::selection {
     background-color: #bfe7f2;
 }
 
-*[data-colour|="blue-light"]::selection {
+*:root *[data-colour|="blue-light"]::selection {
     background-color: #d0d1f6;
 }
 
-*[data-colour|="purple-light"]::selection {
+*:root *[data-colour|="purple-light"]::selection {
     background-color: #eabdff;
 }
 
-*[data-colour|="magenta-light"]::selection {
+*:root *[data-colour|="magenta-light"]::selection {
     background-color: #f0b2d8;
 }
 
-*[data-colour|="red-light"]::selection {
+*:root *[data-colour|="red-light"]::selection {
     background-color: #f9a59b;
 }
 
-*[data-colour|="yellow-light"]::selection {
+*:root *[data-colour|="yellow-light"]::selection {
     background-color: #fcf0be;
 }
 
-*[data-colour|="green-light"]::selection {
+*:root *[data-colour|="green-light"]::selection {
     background-color: #d5fcbb;
 }
 
-*[data-colour|="teal-light"]::selection {
+*:root *[data-colour|="teal-light"]::selection {
     background-color: #bdf0df;
 }
 
-*[data-colour|="cyan-dark"]::selection {
+*:root *[data-colour|="cyan-dark"]::selection {
     background-color: #00495c;
 }
 
-*[data-colour|="blue-dark"]::selection {
+*:root *[data-colour|="blue-dark"]::selection {
     background-color: #383966;
 }
 
-*[data-colour|="purple-dark"]::selection {
+*:root *[data-colour|="purple-dark"]::selection {
     background-color: #4c3159;
 }
 
-*[data-colour|="magenta-dark"]::selection {
+*:root *[data-colour|="magenta-dark"]::selection {
     background-color: #592846;
 }
 
-*[data-colour|="red-dark"]::selection {
+*:root *[data-colour|="red-dark"]::selection {
     background-color: #5d2721;
 }
 
-*[data-colour|="yellow-dark"]::selection {
+*:root *[data-colour|="yellow-dark"]::selection {
     background-color: #4f420d;
 }
 
-*[data-colour|="green-dark"]::selection {
+*:root *[data-colour|="green-dark"]::selection {
     background-color: #1f4505;
 }
 
-*[data-colour|="teal-dark"]::selection {
+*:root *[data-colour|="teal-dark"]::selection {
     background-color: #1c4b3b;
 }
 
-*[data-colour|="cyan"]::selection {
+*:root *[data-colour|="cyan"]::selection {
     background-color: #31b9db;
 }
 
-*[data-colour|="blue"]::selection {
+*:root *[data-colour|="blue"]::selection {
     background-color: #7476fc;
 }
 
-*[data-colour|="purple"]::selection {
+*:root *[data-colour|="purple"]::selection {
     background-color: #c258f2;
 }
 
-*[data-colour|="magenta"]::selection {
+*:root *[data-colour|="magenta"]::selection {
     background-color: #e63ca4;
 }
 
-*[data-colour|="red"]::selection {
+*:root *[data-colour|="red"]::selection {
     background-color: #e83f2c;
 }
 
-*[data-colour|="yellow"]::selection {
+*:root *[data-colour|="yellow"]::selection {
     background-color: #f6d037;
 }
 
-*[data-colour|="green"]::selection {
+*:root *[data-colour|="green"]::selection {
     background-color: #6ad622;
 }
 
-*[data-colour|="teal"]::selection {
+*:root *[data-colour|="teal"]::selection {
     background-color: #49cfa2;
 }
 
-*[data-colour|="white"]::selection {
+*:root *[data-colour|="white"]::selection {
     background-color: #f5f5f5;
 }
 
-*[data-colour|="bright"]::selection {
+*:root *[data-colour|="bright"]::selection {
     background-color: #cccccc;
 }
 
-*[data-colour|="light"]::selection {
+*:root *[data-colour|="light"]::selection {
     background-color: #a3a3a3;
 }
 
-*[data-colour|="medium"]::selection {
+*:root *[data-colour|="medium"]::selection {
     background-color: #828282;
 }
 
-*[data-colour|="regular"]::selection {
+*:root *[data-colour|="regular"]::selection {
     background-color: #636363;
 }
 
-*[data-colour|="dark"]::selection {
+*:root *[data-colour|="dark"]::selection {
     background-color: #3b3b3b;
 }
 
-*[data-colour|="dim"]::selection {
+*:root *[data-colour|="dim"]::selection {
     background-color: #1c1c1c;
 }
 
-*[data-colour|="black"]::selection {
+*:root *[data-colour|="black"]::selection {
     background-color: #0c0c0c;
 }
 
-*[data-colour|="transparent"]::selection {
+*:root *[data-colour|="transparent"]::selection {
     background-color: transparent;
 }
 
-*[data-colour|="inherit"]::selection {
+*:root *[data-colour|="inherit"]::selection {
     background-color: inherit;
 }
 
@@ -839,138 +839,138 @@ a[href], *[data-colour-transition] {
     color: transparent;
 }
 
-*[data-colour|="cyan-light"]::-moz-selection {
+*:root *[data-colour|="cyan-light"]::-moz-selection {
     background-color: #bfe7f2;
 }
 
-*[data-colour|="blue-light"]::-moz-selection {
+*:root *[data-colour|="blue-light"]::-moz-selection {
     background-color: #d0d1f6;
 }
 
-*[data-colour|="purple-light"]::-moz-selection {
+*:root *[data-colour|="purple-light"]::-moz-selection {
     background-color: #eabdff;
 }
 
-*[data-colour|="magenta-light"]::-moz-selection {
+*:root *[data-colour|="magenta-light"]::-moz-selection {
     background-color: #f0b2d8;
 }
 
-*[data-colour|="red-light"]::-moz-selection {
+*:root *[data-colour|="red-light"]::-moz-selection {
     background-color: #f9a59b;
 }
 
-*[data-colour|="yellow-light"]::-moz-selection {
+*:root *[data-colour|="yellow-light"]::-moz-selection {
     background-color: #fcf0be;
 }
 
-*[data-colour|="green-light"]::-moz-selection {
+*:root *[data-colour|="green-light"]::-moz-selection {
     background-color: #d5fcbb;
 }
 
-*[data-colour|="teal-light"]::-moz-selection {
+*:root *[data-colour|="teal-light"]::-moz-selection {
     background-color: #bdf0df;
 }
 
-*[data-colour|="cyan-dark"]::-moz-selection {
+*:root *[data-colour|="cyan-dark"]::-moz-selection {
     background-color: #00495c;
 }
 
-*[data-colour|="blue-dark"]::-moz-selection {
+*:root *[data-colour|="blue-dark"]::-moz-selection {
     background-color: #383966;
 }
 
-*[data-colour|="purple-dark"]::-moz-selection {
+*:root *[data-colour|="purple-dark"]::-moz-selection {
     background-color: #4c3159;
 }
 
-*[data-colour|="magenta-dark"]::-moz-selection {
+*:root *[data-colour|="magenta-dark"]::-moz-selection {
     background-color: #592846;
 }
 
-*[data-colour|="red-dark"]::-moz-selection {
+*:root *[data-colour|="red-dark"]::-moz-selection {
     background-color: #5d2721;
 }
 
-*[data-colour|="yellow-dark"]::-moz-selection {
+*:root *[data-colour|="yellow-dark"]::-moz-selection {
     background-color: #4f420d;
 }
 
-*[data-colour|="green-dark"]::-moz-selection {
+*:root *[data-colour|="green-dark"]::-moz-selection {
     background-color: #1f4505;
 }
 
-*[data-colour|="teal-dark"]::-moz-selection {
+*:root *[data-colour|="teal-dark"]::-moz-selection {
     background-color: #1c4b3b;
 }
 
-*[data-colour|="cyan"]::-moz-selection {
+*:root *[data-colour|="cyan"]::-moz-selection {
     background-color: #31b9db;
 }
 
-*[data-colour|="blue"]::-moz-selection {
+*:root *[data-colour|="blue"]::-moz-selection {
     background-color: #7476fc;
 }
 
-*[data-colour|="purple"]::-moz-selection {
+*:root *[data-colour|="purple"]::-moz-selection {
     background-color: #c258f2;
 }
 
-*[data-colour|="magenta"]::-moz-selection {
+*:root *[data-colour|="magenta"]::-moz-selection {
     background-color: #e63ca4;
 }
 
-*[data-colour|="red"]::-moz-selection {
+*:root *[data-colour|="red"]::-moz-selection {
     background-color: #e83f2c;
 }
 
-*[data-colour|="yellow"]::-moz-selection {
+*:root *[data-colour|="yellow"]::-moz-selection {
     background-color: #f6d037;
 }
 
-*[data-colour|="green"]::-moz-selection {
+*:root *[data-colour|="green"]::-moz-selection {
     background-color: #6ad622;
 }
 
-*[data-colour|="teal"]::-moz-selection {
+*:root *[data-colour|="teal"]::-moz-selection {
     background-color: #49cfa2;
 }
 
-*[data-colour|="white"]::-moz-selection {
+*:root *[data-colour|="white"]::-moz-selection {
     background-color: #f5f5f5;
 }
 
-*[data-colour|="bright"]::-moz-selection {
+*:root *[data-colour|="bright"]::-moz-selection {
     background-color: #cccccc;
 }
 
-*[data-colour|="light"]::-moz-selection {
+*:root *[data-colour|="light"]::-moz-selection {
     background-color: #a3a3a3;
 }
 
-*[data-colour|="medium"]::-moz-selection {
+*:root *[data-colour|="medium"]::-moz-selection {
     background-color: #828282;
 }
 
-*[data-colour|="regular"]::-moz-selection {
+*:root *[data-colour|="regular"]::-moz-selection {
     background-color: #636363;
 }
 
-*[data-colour|="dark"]::-moz-selection {
+*:root *[data-colour|="dark"]::-moz-selection {
     background-color: #3b3b3b;
 }
 
-*[data-colour|="dim"]::-moz-selection {
+*:root *[data-colour|="dim"]::-moz-selection {
     background-color: #1c1c1c;
 }
 
-*[data-colour|="black"]::-moz-selection {
+*:root *[data-colour|="black"]::-moz-selection {
     background-color: #0c0c0c;
 }
 
-*[data-colour|="transparent"]::-moz-selection {
+*:root *[data-colour|="transparent"]::-moz-selection {
     background-color: transparent;
 }
 
-*[data-colour|="inherit"]::-moz-selection {
+*:root *[data-colour|="inherit"]::-moz-selection {
     background-color: inherit;
 }
